--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -90,11 +90,7 @@ $right-icon-offset: -4px;
 	right: 0;
 	width: 100px;
 	height: 100%;
-	background: linear-gradient(
-		to left,
-		var(--cardBg),
-		rgba(255, 255, 255, 0)
-	);
+	background: linear-gradient(to left, var(--cardBg), rgba(255, 255, 255, 0));
 	z-index: 1;
 	pointer-events: none;
 }
