--- a/src/components/molecules/buttonPlayCircle.module.scss
+++ b/src/components/molecules/buttonPlayCircle.module.scss
@@ -1,7 +1,16 @@
 @import '../../styles/common';
 $right-icon-offset: -4px;
+
+.rowUnpadded {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
 .play {
 	all: unset;
-	margin-top: $right-icon-offset;
 	margin-right: $right-icon-offset;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
