--- a/src/components/molecules/openAppButton.module.scss
+++ b/src/components/molecules/openAppButton.module.scss
@@ -1,3 +1,10 @@
 .open_app {
 	margin-left: auto;
 }
+
+.side {
+	margin-top: 10px;
+	align-self: flex-start;
+	justify-content: center;
+	min-width: 50%;
+}
