--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -279,3 +279,10 @@
 		min-width: 50%;
 	}
 }
+.open_app_side {
+	margin-left: 0 !important;
+	margin-top: 10px;
+	align-self: flex-start;
+	justify-content: center;
+	min-width: 50%;
+}
