moved sponsor style to sponsor scss

--- a/src/components/molecules/card/hat/sponsor.module.scss
+++ b/src/components/molecules/card/hat/sponsor.module.scss
@@ -26,3 +26,8 @@
 	flex: 0 0 32px;
 	margin-right: 8px;
 }
+.fullBleed {
+	margin-bottom: 0 !important;
+	--hatBg: #{$ts-white} !important;
+	--hatHoverColor: #{$ts-white} !important;
+}
