--- a/src/containers/presenter/list/list.module.scss
+++ b/src/containers/presenter/list/list.module.scss
@@ -37,18 +37,33 @@
 }
 
 .nameLockup {
-	flex-grow: 1;
 	display: flex;
 	align-items: center;
 }
-
-.name {
+.textWrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	flex-grow: 1;
+
+	@media (min-width: $breakpoint-lg) {
+		flex-direction: row;
+		align-items: center;
+	}
+}
+.name {
 	font-size: 20px;
+	width: 100%;
+	margin-bottom: 4px;
+	@media (min-width: $breakpoint-lg) {
+		width: auto;
+		margin-bottom: 0;
+		margin-right: 16px;
+	}
 }
 
 .summary {
-	margin-top: 8px;
+	width: 100%;
 	color: $ts-midTone;
 	font-size: 16px;
 	line-height: 1.21;
@@ -57,7 +72,6 @@
 	text-overflow: ellipsis;
 
 	@media (min-width: $breakpoint-lg) {
-		margin-top: 0;
-		flex: 0 0 67%;
+		width: auto;
 	}
 }
