--- a/src/components/atoms/circleInitials.module.scss
+++ b/src/components/atoms/circleInitials.module.scss
@@ -8,20 +8,20 @@
 }
 
 .large {
-	width: 64px;
+	min-width: 64px;
 	height: 64px;
 	font-size: 26px;
 }
 
 .mid {
-	width: 32px;
+	min-width: 32px;
 	height: 32px;
 	font-size: 16px;
 	margin-right: 8px;
 }
 
 .small {
-	width: 24px;
+	min-width: 24px;
 	height: 24px;
 	font-size: 12px;
 }
