Update font SCSS

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,7 +2,7 @@
 	font-family: 'Inter', 'system-ui', sans-serif;
 
 	@supports (font-variation-settings: normal) {
-		font-family: 'Inter var', 'system-ui', sans-serif;
+		font-family: 'InterVariable', 'system-ui', sans-serif;
 	}
 }
 
