--- a/src/styles/inter.scss
+++ b/src/styles/inter.scss
@@ -2,11 +2,11 @@
 
 @use '~inter-ui/default' with (
 	$inter-font-display: swap,
-	$inter-font-path: '~inter-ui/Inter (web)'
+	$inter-font-path: '~inter-ui/web'
 );
 @use '~inter-ui/variable' with (
 	$inter-font-display: swap,
-	$inter-font-path: '~inter-ui/Inter (web)'
+	$inter-font-path: '~inter-ui/variable'
 );
 
 @include default.all;
