Fix miniplayer CSS

--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -49,6 +49,7 @@
 	}
 	:global(.video-js) {
 		// handle responsive manually
+		display: block;
 		width: auto;
 		height: $miniplayer-height;
 		padding-top: 0;
