--- a/src/components/organisms/cardSlider/section/index.module.scss
+++ b/src/components/organisms/cardSlider/section/index.module.scss
@@ -19,3 +19,16 @@
 		text-decoration: none;
 	}
 }
+.seeAlldbg {
+	font-size: 12px;
+	color: $ts-darkened-white;
+	text-transform: none;
+	letter-spacing: normal;
+
+	&:hover {
+		text-decoration: none;
+	}
+}
+.salmon {
+	color: $ts-salmon;
+}
