updated person links

--- a/src/components/organisms/cardSlider/index.module.scss
+++ b/src/components/organisms/cardSlider/index.module.scss
@@ -86,11 +86,63 @@
 		}
 	}
 }
+.arrowSalmon {
+	cursor: pointer;
+	border: none;
+	position: absolute;
+	background: $ts-salmon;
+	top: calc(50% - var(--arrow-full-width) / 2);
+	padding: var(--arrow-padding);
+	box-shadow: $ts-shadow-small-default;
+	z-index: 100;
+	border-radius: 100%;
+	opacity: 0;
+	transition: opacity $transition-quick, box-shadow $transition-quick;
+
+	&:hover {
+		box-shadow: $ts-shadow-small-hover;
+	}
+
+	&:disabled {
+		cursor: default;
+	}
+
+	&:first-child {
+		left: var(--arrow-margin);
+	}
+
+	&:last-child {
+		right: var(--arrow-margin);
+	}
+
+	@media (min-width: $breakpoint-lg) {
+		position: initial;
+		background: transparent;
+		opacity: 1;
+		box-shadow: none;
+		border-radius: 0;
+		transition: none;
+
+		&:hover {
+			box-shadow: none;
+		}
+
+		&:first-child {
+			margin-right: calc(var(--arrow-margin) + env(safe-area-inset-right));
+		}
+
+		&:last-child {
+			margin-left: calc(var(--arrow-margin) + env(safe-area-inset-left));
+		}
+	}
+}
 
 .base:hover .arrow:not(:disabled) {
 	opacity: 1;
 }
-
+.base:hover .arrowSalmon:not(:disabled) {
+	opacity: 1;
+}
 .base swiper-container {
 	flex-grow: 1;
 }
@@ -113,4 +165,5 @@
 .whiteBg {
 	background-color: $ts-white;
 	border-radius: 16px;
+	margin-top: 12px;
 }
