fix: arrow color

--- a/src/components/organisms/cardSlider/index.module.scss
+++ b/src/components/organisms/cardSlider/index.module.scss
@@ -82,6 +82,11 @@
 		}
 	}
 }
+.arrowWhite {
+	@media (min-width: $breakpoint-lg) {
+		color: $ts-white;
+	}
+}
 
 .base:hover .arrow:not(:disabled) {
 	opacity: 1;
