--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -1,21 +1,24 @@
 @import '../../styles/common.scss';
 
 .wrapper {
-	display: flex;
-	background-color: $ts-bibleVersionH;
+    display: flex;
+    background-color: $ts-bibleVersionH;
 }
 
 .wrapper button {
-	background: none;
-	border: none;
+    background: none;
+    border: none;
 }
 
 .wrapper li,
 .wrapper li button {
-	color: $ts-lightTone;
+    color: $ts-lightTone;
+    font-weight: 700;
+    size: 16px;
+    line-height: 19.2px;
 }
 
 .wrapper :global(.active),
 .wrapper :global(.active) button {
-	color: $ts-salmon;
+    color: $ts-salmon;
 }
