passage navigation styling

--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -16,6 +16,8 @@
     font-weight: 700;
     size: 16px;
     line-height: 19.2px;
+    text-transform: uppercase;
+    list-style-type: none;
 }
 
 .wrapper :global(.active),
