--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -5,13 +5,15 @@
     background-color: $ts-bibleVersionH;
 }
 
+.wrapper ul {
+    margin: 0;
+    padding: 0;
+}
+
 .wrapper button {
     background: none;
     border: none;
-}
-
-.wrapper li {
-    margin: 20px 0;
+    padding: 10px 24px;
 }
 
 .wrapper li,
