--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -16,11 +16,11 @@
 	padding: 10px 24px;
 }
 
-.wrapper li:first-child button {
+.wrapper .books>li:first-child button {
 	padding-top: 16px;
 }
 
-.wrapper li:last-child button {
+.wrapper .books>li:last-child button {
 	padding-bottom: 16px;
 }
 
@@ -39,6 +39,20 @@
 	color: $ts-salmon;
 }
 
+.wrapper,
+.wrapper .books,
+.wrapper .chapters {
+	width: 100%;
+}
+
+.chapters {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
+	background-color: $ts-darkened-bibleH;
+}
+
 .chapter button {
-	font-variant-numeric: tabular-nums;
+	width: 100%;
+	height: 100%;
+	padding: 24px 0;
 }
