Add toggle for grid and list views

--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -1,7 +1,6 @@
 @import '../../styles/common.scss';
 
 .wrapper {
-	display: flex;
 	background-color: $ts-bibleVersionH;
 }
 
@@ -29,13 +28,17 @@
 .wrapper li a {
 	color: $ts-lightTone;
 	font-weight: 700;
-	size: 16px;
+	font-size: 16px;
 	line-height: 19.2px;
 	text-transform: uppercase;
 	list-style-type: none;
 }
 
 .wrapper :global(.active) > button {
+	color: $ts-salmon;
+}
+
+.switch > :global(button.active) {
 	color: $ts-salmon;
 }
 
@@ -68,4 +71,17 @@
 
 .books button:hover {
 	color: $ts-salmon;
+}
+
+.switch {
+	border-bottom: 1px solid $ts-salmon;
+}
+
+.switch > button {
+	color: $ts-lightTone;
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 14.4px;
+	text-transform: uppercase;
+	display: inline-block;
 }
