Add draft grid view

--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -23,6 +23,11 @@
 	padding-bottom: 16px;
 }
 
+.wrapper .books:global(.grid) {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+
 .wrapper li,
 .wrapper li button,
 .wrapper li a {
