--- a/src/components/organisms/passageNavigation.module.scss
+++ b/src/components/organisms/passageNavigation.module.scss
@@ -23,10 +23,10 @@
 	padding-bottom: 16px;
 }
 
-.wrapper .books:global(.grid) {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
-}
+// .wrapper .books:global(.grid) {
+// 	display: grid;
+// 	grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
+// }
 
 .wrapper li,
 .wrapper li button,
@@ -53,9 +53,9 @@
 	width: 100%;
 }
 
-.books:global(.grid) .chapters {
-	grid-column: 1 / -1;
-}
+// .books:global(.grid) .chapters {
+// 	grid-column: 1 / -1;
+// }
 
 .chapters {
 	display: grid;
@@ -92,9 +92,19 @@
 	font-size: 12px;
 	line-height: 14.4px;
 	text-transform: uppercase;
-	display: inline-block;
 }
 
 .chaptersWrapper {
-	grid-column: 1 / -1;
+	width: 100%;
+	display: none;
+}
+
+.chaptersWrapper:global(.active) {
+	display: block;
+	float: left;
+}
+
+.books:global(.grid) .book {
+	width: 70px;
+	display: inline-block;
 }
