--- a/src/components/organisms/passageNavigation/index.module.scss
+++ b/src/components/organisms/passageNavigation/index.module.scss
@@ -13,7 +13,8 @@
 
 .hat {
 	background-color: var(--bibleHatBackground);
-	padding: 16px 24px;
+	padding: 0 24px;
+	height: 48px;
 	display: flex;
 	text-decoration: none;
 	color: var(--bibleHatTextColor, --bibleTextColor);
@@ -39,10 +40,6 @@
 	p {
 		margin-top: 8px;
 		margin-bottom: 16px;
-	}
-
-	@media (min-width: $breakpoint-xl) {
-		flex-direction: row;
 	}
 }
 
@@ -70,11 +67,6 @@
 	padding-bottom: 16px;
 }
 
-// .content .books:global(.grid) {
-// 	display: grid;
-// 	grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
-// }
-
 .content li,
 .content li button,
 .content li a {
@@ -88,6 +80,10 @@
 
 .content :global(.active) > button {
 	color: $ts-salmon;
+}
+
+.switch {
+	border-bottom: 1px solid $ts-midTone;
 }
 
 .switch > :global(button.active) {
@@ -104,16 +100,12 @@
 	width: 100%;
 }
 
-// .books:global(.grid) .chapters {
-// 	grid-column: 1 / -1;
-// }
-
 .chapters {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
-
 	border-top: 1px solid $ts-salmon;
 	border-bottom: 1px solid $ts-salmon;
+	background-color: $ts-darkened-bibleH;
 }
 
 .chapter a {
@@ -147,8 +139,8 @@
 	float: left;
 }
 
-.books.grid {
-	border-top: 1px solid $ts-dark;
+.nt {
+	border-top: 1px solid $ts-midTone;
 }
 
 .books.grid .book {
