--- a/src/components/organisms/passageNavigation/index.module.scss
+++ b/src/components/organisms/passageNavigation/index.module.scss
@@ -21,13 +21,16 @@
 	gap: 10px;
 	align-items: center;
 	justify-content: space-between;
-	cursor: pointer;
 
 	h6 {
 		margin: 0;
 		font-size: 10px;
 		color: $ts-salmon;
 	}
+}
+
+.hasChildren .hat {
+	cursor: pointer;
 }
 
 .dropdownButton {
