--- a/src/containers/bible/book.module.scss
+++ b/src/containers/bible/book.module.scss
@@ -5,7 +5,9 @@
 .hat {
 	background-color: $ts-bibleH;
 	padding: 16px 24px;
-	display: block;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	text-decoration: none;
 	h4 {
 		margin: 2px 0 0;
@@ -18,6 +20,56 @@
 	&:hover {
 		text-decoration: none;
 		background: $ts-darkened-bibleH;
+	}
+}
+
+.hatLeft {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+}
+
+.hatRight {
+	margin-right: 12px;
+}
+
+.versionSelectorBtn {
+	background: none;
+	border: none;
+	color: $ts-white;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	font-size: 14px;
+	padding: 8px;
+
+	&:hover {
+		opacity: 0.8;
+	}
+}
+
+.dropdownArrow {
+	font-size: 10px;
+}
+
+.versionDropdownList {
+	list-style: none;
+	margin: 0;
+	padding: 8px 0;
+
+	li {
+		a {
+			color: $ts-dark;
+			display: block;
+			padding: 8px 16px;
+			text-decoration: none;
+			white-space: nowrap;
+
+			&:hover {
+				background: $ts-cream;
+			}
+		}
 	}
 }
 
