disable version links when chapter not available

--- a/src/components/molecules/bibleVersionTophat/index.module.scss
+++ b/src/components/molecules/bibleVersionTophat/index.module.scss
@@ -88,5 +88,17 @@
 				background: $ts-cream;
 			}
 		}
+
+		&.disabled {
+			opacity: 0.5;
+			cursor: not-allowed;
+		}
+
+		.disabledLink {
+			color: $ts-midTone;
+			display: block;
+			padding: 8px 16px;
+			white-space: nowrap;
+		}
 	}
 }
