updated see all to not reload site when clicked (#620)
* updated see all to not reload site when clicked

* updated hover color

* updated audit

---------

Co-authored-by: Okeino McGowan <okeinomcgowan@Grace-Anns-iMac.local>

--- a/src/components/organisms/cardSlider/section/index.module.scss
+++ b/src/components/organisms/cardSlider/section/index.module.scss
@@ -11,12 +11,17 @@
 
 .seeAll {
 	font-size: 12px;
+	font-weight: bold;
 	color: $ts-dark;
 	text-transform: none;
 	letter-spacing: normal;
+	background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
 
 	&:hover {
-		text-decoration: none;
+		color: $ts-red;
 	}
 }
 .seeAlldbg {
