sort bible chapters

--- a/src/components/organisms/passageNavigation/chapterGrid.module.scss
+++ b/src/components/organisms/passageNavigation/chapterGrid.module.scss
@@ -29,3 +29,10 @@
 .chapters li a.active {
 	color: $ts-salmon;
 }
+
+.loading, .error {
+	text-transform: none;
+	font-weight: normal;
+	text-align: center;
+	padding: 24px;
+}
