adjust timeout settings; run intl

--- a/src/components/organisms/passageNavigation/chapterGrid.module.scss
+++ b/src/components/organisms/passageNavigation/chapterGrid.module.scss
@@ -30,7 +30,8 @@
 	color: $ts-salmon;
 }
 
-.loading, .error {
+.loading,
+.error {
 	text-transform: none;
 	font-weight: normal;
 	text-align: center;
