--- a/src/components/molecules/searchBar.module.scss
+++ b/src/components/molecules/searchBar.module.scss
@@ -76,6 +76,7 @@
 }
 
 .clear,
+.backToSearch,
 .cancel {
 	margin: 0;
 	padding: 0;
@@ -84,6 +85,7 @@
 	cursor: pointer;
 }
 
+.backToSearch,
 .cancel {
 	font-family: Inter;
 	font-size: 12px;
@@ -94,6 +96,13 @@
 	margin-left: 28px;
 	@media (max-width: $breakpoint-sm) {
 		display: none;
+	}
+}
+.backToSearch {
+	@media (max-width: $breakpoint-sm) {
+		display: inline;
+		font-size: 12px;
+		white-space: nowrap;
 	}
 }
 
