--- a/src/components/molecules/bibleVersionTophat/index.module.scss
+++ b/src/components/molecules/bibleVersionTophat/index.module.scss
@@ -37,7 +37,10 @@
 	h6 {
 		margin: 0;
 		font-size: 10px;
-		color: $ts-salmon;
+		color: $ts-bibleB;
+		&:hover {
+			color: $ts-salmon;
+		}
 	}
 }
 
@@ -45,6 +48,11 @@
 	display: flex;
 	align-items: center;
 	gap: 12px;
+	color: $ts-white;
+
+	&:hover {
+		color: $ts-salmon;
+	}
 }
 
 .hatRight {
